objects/SVMXC__Object_Cache__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>This is to define ServiceMax Object Cache.</description>
    <fields>
        <fullName>SVMXC__Description__c</fullName>
        <description>Description of the Smart Object.</description>
        <inlineHelpText>Description of the Smart Object.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Object_Label__c</fullName>
        <description>The user displayed label, of the Smart Object.</description>
        <inlineHelpText>The user displayed label, of the Smart Object.</inlineHelpText>
        <label>Smart Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Schema__c</fullName>
        <description>Schema of the Smart Object, in JSON format.</description>
        <inlineHelpText>Schema of the Smart Object, in JSON format.</inlineHelpText>
        <label>Schema</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Object Cache</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Cache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>